kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lionpay
  labels:
    name: lionpay
